# aprendepython

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: publish-pypi.yml
aprendepython/: __init__.py  config.py  intro.py  menu.py  utils.py
aprendepython/content/: __init__.py  lesson_00.py  lesson_00_intro.py  lesson_01.py  lesson_01_numerics.py  lesson_02.py  lesson_02_strings.py  lesson_03.py  lesson_03_booleans.py  lesson_04_arithmetic_ops.py  lesson_05_relational_ops.py  lesson_06_logical_ops.py  lesson_07_lists.py  lesson_08_tuples.py  lesson_09_dicts.py  lesson_10_conditionals.py  lesson_11_loops.py  lesson_12_functions.py  lesson_13_classes.py
aprendepython/models/: exercise.py  lesson.py  module.py
