[metadata]
name = aprendepython
version = 1.0.0
author = Óscar Miranda
author_email = oscarmiranda3615@gmail.com
url = https://github.com/OscarM3615/aprendepython/
description = Librería interactiva para aprender los fundamentos de Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, curso, fundamentos
license = MIT
classifiers =
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: Spanish
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >= 3.7
install_requires = file: requirements.txt
